# resources/js/provider.js
@@ -4,6 +4,7 @@ const baseUrl = 'http://127.0.0.1:8001/api';
       return {
           // home page
           getCategories: `${baseUrl}/getCategories`,
+          searchProducts: `${baseUrl}/search-products`,
 
           // category page
           getProductsByCategorySlug: (slug) => `${baseUrl}/products-by-category/${slug}`,
