# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Front\CategoryController;
 use App\Http\Controllers\Front\DetailsProductController;
+use App\Http\Controllers\Front\HomePageController;
 
 /*
 |--------------------------------------------------------------------------
@@ -15,10 +16,15 @@ use App\Http\Controllers\Front\DetailsProductController;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
-
+// home page
 Route::get('/getCategories', [CategoryController::class, 'getCategory']);
+Route::get('/search-products', [HomePageController::class, 'searchProduct']);
+
+// category page
 Route::get('/get-parent-categories-with-count', [CategoryController::class, 'getParentCategoriesWithProductCount']);
 Route::get('/products-by-category/{slug}', [CategoryController::class, 'getProductsByCategorySlug']);
+
+// details page
 Route::get('/product-detail/{slug}', [DetailsProductController::class, 'getProductDetail']);
 Route::get('/related-products/{slug}', [DetailsProductController::class, 'getRelatedProducts']);
 
